# stellar-nebula-nomad

./: .gitignore  APPROACH_STATEMENT.md  BACKUP_RECOVERY_PR.md  Cargo.toml  DISASTER_RECOVERY.md  GAS_OPTIMIZATION_PR.md  IMPLEMENTATION_SUMMARY.md  PRIVACY_STATS_PR.md  PR_RBAC_DESIGN.md  PR_SUCCESS_SUMMARY.md  README.md  setup-monitoring.sh
benches/: gas_benchmarks.rs  performance_regression.rs
docs/: BACKUP_RECOVERY_README.md  BUG_BOUNTY_PAYOUT.md  COMMUNITY_EVENT_BUILDING.md  EVENT_SCHEDULER_GUIDE.md  GAS_OPTIMIZATION_GUIDE.md  PRIVACY_INTEGRATION_GUIDE.md  PRIVACY_STATS.md  RBAC_PATTERN_GUIDE.md  monitoring.md
examples/: event_scheduler_example.rs  privacy_stats_example.rs  scan_example.rs
integrations/: horizon_client.rs  mod.rs  stellar_expert.rs
mobile/: App.tsx  app.json  babel.config.js  package.json  tsconfig.json
monitoring/: backup-monitoring.yml  docker-compose.yml
scripts/: backup.sh  deploy.sh  pin_metadata.sh  restore.sh  rollback.sh  verify.sh
sdk/: README.md  package.json
src/: access_control.rs  achievement_engine.rs  analytics.rs  audit_logger.rs  batch_processor.rs  battle_pass.rs  bounty_board.rs  bug_bounty_payout.rs  composability_examples.rs  content_tools.rs  contract_versioning.rs  crafting.rs  dao.rs  data_exporter.rs  difficulty_curve.rs  energy_manager.rs  event_framework.rs  event_scheduler.rs  fleet_manager.rs  fractional_resources.rs  gas_optimized_compute.rs  gas_optimized_storage.rs  gas_recovery.rs  gas_sponsor.rs  gifting_system.rs  governance.rs  health_monitor.rs  indexer_callbacks.rs  leaderboards.rs  lib.rs  metadata_resolver.rs  metrics.rs  mission_generator.rs  mobile_views.rs  navigation_planner.rs  nebula_archive.rs  nebula_explorer.rs  nebula_gen.rs  nft_marketplace.rs  nomad_bonding.rs  (+25 more)
subgraph/: README.md  package.json  schema.graphql  subgraph.yaml
test_snapshots/: prop_difficulty_weights_sum_100.100.json  prop_difficulty_weights_sum_100.103.json  prop_difficulty_weights_sum_100.105.json  prop_difficulty_weights_sum_100.106.json  prop_difficulty_weights_sum_100.107.json  prop_difficulty_weights_sum_100.110.json  prop_difficulty_weights_sum_100.111.json  prop_difficulty_weights_sum_100.113.json  prop_difficulty_weights_sum_100.114.json  prop_difficulty_weights_sum_100.116.json  (+1049 more)
(+88 files in other folders)
