[package]
name = "stellar-nebula-nomad"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Decentralized space exploration sim on Stellar with procedural nebula generation and NFT ships"
repository = "https://github.com/yourusername/stellar-nebula-nomad"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "20", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
